<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:backgroundTint="@color/purple_500"
                app:cardCornerRadius="30dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/iv_circle"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/circle_white_512"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintVertical_chainStyle="packed"
                        app:layout_collapseMode="parallax" />

                    <ImageView
                        android:id="@+id/iv_banner"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_android_black_24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintVertical_chainStyle="packed"
                        app:layout_collapseMode="parallax" />

                    <TextView
                        android:id="@+id/tvBannerWelcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:layout_marginStart="16dp"
                        android:textColor="@android:color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/tvMommyMunch"
                        app:layout_constraintVertical_chainStyle="packed"
                        app:layout_collapseMode="parallax" />

                    <TextView
                        android:id="@+id/tvMommyMunch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textSize="27sp"
                        android:textStyle="bold"
                        android:layout_marginStart="16dp"
                        android:textColor="@android:color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvBannerWelcome"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_collapseMode="parallax" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAboveRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:padding="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:menu="@menu/menu"
        app:title="@string/app_name"
        android:elevation="4dp"
        app:titleTextColor="@color/white"
        android:background="?attr/colorPrimary"
        android:layout_gravity="top"
        app:navigationIconTint="@color/white"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_add_24"
        android:tint="@color/white"
        android:importantForAccessibility="no" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone"
        android:layout_gravity="center"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
